# platform.upstream.libXv

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  libXv-1.0.7.tar.bz2.delta  libXv-1.0.7.tar.bz2.id  project.config  xv.pc.in
include/X11/extensions/: Xvlib.h
man/: .cvsignore  Makefile.am  Xv.man  XvFreeAdaptorInfo.man  XvFreeEncodingInfo.man  XvGetPortAttribute.man  XvGetStill.man  XvGetVideo.man  XvGrabPort.man  XvPortNotify.man  XvPutStill.man  XvPutVideo.man  XvQueryAdaptors.man  XvQueryBestSize.man  XvQueryEncodings.man  XvQueryExtension.man  XvSelectPortNotify.man  XvSelectVideoNotify.man  XvSetPortAttribute.man  XvStopVideo.man  XvUngrabPort.man  XvVideoNotify.man
packaging/: baselibs.conf  libXv.changes  libXv.spec
src/: Makefile.am  Xv.c  Xvlibint.h
